@@ -17,7 +17,7 @@ result = ...
     ~isnumeric(s) && ...
     ~islogical(s) && ...
     ~ischar(s) && ...
-    (0 == exist('isstring', 'builtin') || ~isstring(s)) && ...
+    (verLessThan('matlab', '9.1') || ~isstring(s)) && ...
     ~iscell(s) && ...
     ~isstruct(s) && ...
     ~isa(s, 'function_handle') && ...
